<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bittool</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="calc">Test</string>
    <string name="textBTC">1 BTC</string>
    <string name="textPrice">0.00 USD</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Update frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="market">Update default Market</string>
    <string name="market_summary">Set the Default Market</string>
    <string name="currency">Update default Currency</string>
    <string name="currency_summary">Set the Default Currency</string>
    <string name="sound">Startup Sound</string>
    <string name="sound_summary">Turn the sound on or off.</string>
    <string name="change">Change of Price<sttring></sttring></string>

    <!-- About Message -->
    <string name="about_message">Version 1.0 \n &#xa9; BitTool 2013 \n\nTHE FOLLOWING SETS FOURTH
    ATTRIBUTION NOTICES FOR THIRD PARTY SOFTWARE THAT MAY BE CONTAINED IN PORTIONS OF THE BITTOOL PRODUCT.\n\n
    -----\n\nThe following software may be included in this product: ActionBarSherlock. This software
    contains the following license and notice below:\n\nCopyright 2012 Jake Wharton\nLicensed under the
    Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the
    License. You may obtain a copy of the License at \n\n
    http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in
    writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
    OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language
    governing permissions and limitations under the License.\n\n -----\n\nTHE FOLLOWING SETS FOURTH
    ATTRIBUTION NOTICES FOR THIRD PARTY SOFTWARE THAT MAY BE CONTAINED IN PORTIONS OF THE BITTOOL PRODUCT.\n\n
    -----\n\nThe following software may be included in this product: Android Open Source Project. This
    software contains the following license and notice below:\n\nThe preferred license for the Android
    Open Source Project is the Apache Software License, 2.0 ("Apache 2.0"), and the majority of the
    Android software is licensed with Apache 2.0. You may obtain a copy of the License at \n\n
    http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in
    writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
    OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language
    governing permissions and limitations under the License.\n\n-----\n\nTHE FOLLOWING SETS FOURTH ATTRIBUTION
    NOTICES FOR THIRD PARTY SOFTWARE THAT MAY BE CONTAINED IN PORTIONS OF THE BITTOOL PRODUCT.\n\n
    -----\n\nThe following software may be included in this product: Android ViewPagerIndicator. This
    software contains the following license and notice below:\n\nCopyright 2012 Jake Wharton\nCopyright
    2011 Patrik Åkerfeldt\nCopyright 2011 Francisco Figueiredo Jr.\n\nLicensed under the Apache License,
    Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may
    obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in
    writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
    OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language
    governing permissions and limitations under the License.\n\n-----\n\nTHE FOLLOWING SETS FOURTH
    ATTRIBUTION NOTICES FOR THIRD PARTY SOFTWARE THAT MAY BE CONTAINED IN PORTIONS OF THE BITTOOL PRODUCT.\n\n
    -----\n\nThe following software may be included in this product: Xchange. This software contains
    the following license and notice below:\n\n (The MIT License)

Copyright &#xa9; 2012-2013 Xeiam LLC http://xeiam.com

Permission is hereby granted, free of charge, to any person obtaining a copy of
this software and associated documentation files (the "Software"), to deal in
the Software without restriction, including without limitation the rights to
use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies
of the Software, and to permit persons to whom the Software is furnished to do
so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.\n</string>

</resources>